--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5sp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <android.support.v7.widget.CardView
@@ -27,7 +28,9 @@
                 android:ems="5"
                 >
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:id="@+id/imgbook"
+                    android:padding="10sp"
+                    android:layout_width="120sp"
                     android:layout_height="220sp"
                     android:layout_weight="1"
                     android:src="@drawable/bg"
@@ -51,7 +54,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Title name"
+                    android:id="@+id/titleName"
                     android:padding="5sp"
                     android:layout_weight="0"
                     android:textSize="30sp"
@@ -59,10 +62,22 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="details"
+                    android:id="@+id/author"
+                    android:padding="5sp"
+                    android:layout_weight="0"
+                    android:textSize="20sp"
+                    />
+                <com.borjabravo.readmoretextview.ReadMoreTextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/details"
+                    android:layout_height="wrap_content"
                     android:padding="5sp"
                     android:layout_weight="1"
                     android:textSize="15sp"
+                    app:trimExpandedText="..show more"
+                    app:trimCollapsedText="..show less"
+                    app:trimMode="trimModeLength"
+                    app:trimLength="100"
                     />
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -72,18 +87,18 @@
 
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/review"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Button" />
+                        android:text="@string/review" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/download"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Button" />
+                        android:text="@string/download" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
