--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CC111111"
     tools:context="com.app.mohamedgomaa.arabic_book_buy.MainActivity">
-    <android.support.v7.widget.RecyclerView
+    <ListView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:splitMotionEvents="?attr/isLightTheme">
 
-    </android.support.v7.widget.RecyclerView>
+    </ListView>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
