--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -7,19 +7,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/card_margin"
-        android:padding="5sp"
-        card_view:cardBackgroundColor="#8f7d7e7e"
-        card_view:cardCornerRadius="10sp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@drawable/shpe"
+            android:layout_margin="10sp"
+            android:padding="5sp"
             android:weightSum="5"
             >
             <LinearLayout
@@ -30,7 +24,7 @@
                 >
                 <ImageView
                     android:id="@+id/imgbook"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="200sp"
                     android:src="@drawable/bg"
                     android:scaleType="fitXY"
@@ -41,6 +35,7 @@
                     android:id="@+id/price"
                     android:textSize="25sp"
                     android:padding="5sp"
+                    android:textColor="@android:color/white"
                     android:text="@string/price"
                     />
             </LinearLayout>
@@ -56,6 +51,8 @@
                     android:id="@+id/titleName"
                     android:padding="5sp"
                     android:textSize="30sp"
+                    android:textColor="@android:color/white"
+
                     />
                 <TextView
                     android:layout_width="match_parent"
@@ -63,6 +60,8 @@
                     android:id="@+id/author"
                     android:padding="5sp"
                     android:textSize="20sp"
+                    android:textColor="@android:color/white"
+
                     />
                 <ScrollView
                     android:layout_width="match_parent"
@@ -78,6 +77,7 @@
                     android:id="@+id/details"
                     android:layout_height="wrap_content"
                     android:padding="5sp"
+                    android:textColor="@android:color/white"
                     android:textSize="15sp"
                     app:trimExpandedText="..show more"
                     app:trimCollapsedText="..show less"
@@ -90,26 +90,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
+                    android:orientation="vertical"
                     >
-
-
-                    <Button
-                        android:id="@+id/review"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/review" />
 
                     <Button
                         android:id="@+id/download"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/download" />
+                    <Button
+                        android:id="@+id/review"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/review" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
 </LinearLayout>
