--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -1,10 +1,35 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<com.app.mohamedgomaa.arabic_books.main.HaftRightCoordinatorLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5sp"
+    >
+    
+    <ImageView
 
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="@dimen/_50sdp"
+        android:id="@+id/backgroundView"
+        android:layout_marginTop="5sp"
+        android:layout_marginBottom="5sp"
+        android:src="@drawable/ic_3d_rotation"
+        android:background="@color/cardview_dark_background"
+        android:layout_height="match_parent"
+      />
+<com.xenione.libs.swipemaker.SwipeLayout
+    android:id="@+id/foregroundView"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_200sdp"
+
+    >
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5sp"
+    android:layout_marginTop="5sp"
+
+
     >
 
         <LinearLayout
@@ -12,7 +37,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@drawable/shpe"
-            android:layout_margin="10sp"
             android:padding="5sp"
             android:weightSum="5"
             >
@@ -111,3 +135,5 @@
             </LinearLayout>
         </LinearLayout>
 </LinearLayout>
+</com.xenione.libs.swipemaker.SwipeLayout>
+</com.app.mohamedgomaa.arabic_books.main.HaftRightCoordinatorLayout>
